# serialize-bits

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: des.rs  lib.rs  ser.rs
tests/: custom.rs  types.rs
